kubedefs/dbdeploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
        - name: vprodb
          image: vprocontainers/vprofiledb
          ports:
            - containerPort: 3306
              name: vprodb-port
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: vpro-db-data
      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
