kubedefs/rmqdeploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vprormq
  labels:
    app: vprormq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprormq
  template:
    metadata:
    labels:
      app: vprormq
    spec:
      containers:
        - name: vprormq
          image: rabbitmq
          ports: 
            - containerPort: 5672
              name: vprormq-port
