kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp # doesn't matter as there will be ingress controller
spec:
  type: ClusterIP
  selector:
    app: vproapp
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
