kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  type: ClusterIP
  selector:
    app: vprodb
  ports:
  - port: 3306
    targetPort: vprodb-port # the name of the pod
    protocol: TCP
